<resources>
    <string name="app_name">Go Shopping</string>
    <string name="loading">Loading shopping lists</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="description_create_shopping_list">Enter new shopping list name</string>
    <string name="loading_items">Loading shopping list items</string>
    <string name="description_create_shopping_item">Enter your new item details</string>
    <string name="button_show_archived">Show archived</string>
    <string name="button_show_current">Show current</string>
    <string name="items_count">Items:&#160;</string>
    <string name="hint_list_name">List name</string>
    <string name="hint_item_name">Item name</string>
    <string name="hint_item_quantity">Quantity</string>
    <string name="hint_unit">Unit</string>
    <string name="empty_list_name_warning">You left the list name field empty!</string>
    <string name="empty_item_details_warning">You left one of the fields empty!</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="clear_all_lists">All</string>
    <string name="clear_archived_lists">Archived</string>
    <string name="clear_current_lists">Current</string>
    <string name="nav_drawer_clear_title">Clear shopping lists</string>
    <string name="pending_lists">Current lists</string>
    <string name="archived_lists">Archived lists</string>
    <string name="archived">Archived lists</string>
    <string name="current">Current lists</string>
    <string name="list_archived">Shopping list %s archived</string>
    <string name="action_sort">Sort shopping lists</string>
</resources>
