<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/dialog_padding"
        android:paddingStart="@dimen/dialog_padding"
        android:paddingTop="@dimen/dialog_padding">

        <TextView
            style="@style/DialogTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_create_shopping_list"/>

        <EditText
            android:id="@+id/et_shopping_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_list_name"
            android:inputType="text"
            android:layout_marginTop="@dimen/input_margin_top"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dialog_buttons_margin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_cancel"
                style="@style/DialogTextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"/>

            <TextView
                android:id="@+id/button_ok"
                style="@style/DialogTextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok"/>
        </LinearLayout>
    </LinearLayout>
</layout>